# d4g-project-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  codecarbon.html  core.html  d4g  d4g.ini  index.html  pyproject.toml  search.json  settings.ini  sitemap.xml
.d4g-tools/lib/: .from-scratch-sh  .from-scratch-sh.initial  common.sh  depends.sh  ini_parser.sh  platforms.ini  user-agents.json  utils.sh
.d4g-tools/lib/model/: country.py
.github/workflows/: d4g-utils.yml  pre-commit.yaml
PROJECT_TO_RENAME/: python.py  test.py
_docs/: core.html  index.html  robots.txt  search.json  sitemap.xml
notebooks/: 00_core.ipynb  codecarbon.ipynb  index.ipynb  nbdev.yml  python_dash_template
python_dash_template/: _modidx.py  core.py
