[tool.poetry]
name = "python-dash-template"
version = "0.1.0"
description = "Template"
authors = ["DataForGood"]
license = " GNU AFFERO GENERAL PUBLIC LICENSE v3.0"
readme = "README.md"
packages = [{include = "python_dash_template"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter-dash = "^0.4.2"
pandas = "^1.5.2"
nbdev = "^2.3.9"
requests = "^2.28.1"
ipykernel = "^6.19.2"
jupyterlab = "^3.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
