[project]
name = "13_pollution_eau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.1.3",
    "duckdb-engine>=0.15.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipython-sql>=0.5.0",
    "jupysql>=0.10.17",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]